kuber-homeworks_2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-web-content
        configMap:
          name: web-content # УКАЖИТЕ имя созданного ConfigMap
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-web-content # ПОДКЛЮЧЕНИЕ ConfigMap
          mountPath: /usr/share/nginx/html/

      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
